# watch

./: 0.bootstrap.js  Cargo.toml  README.md  bootstrap.js  index.html
docs/: 0.bootstrap.js  aliases.js  bootstrap.js  index.html  main.js  music.html  painting.html  search-index.js  settings.html  source-files.js  watch_bg.js
docs/hello_world/: all.html  fn.main.html  index.html
docs/pkg/: package.json  watch.d.ts  watch.js  watch_bg.d.ts  watch_bg.wasm
docs/scenes/: 105.html  118.html  1298.html  155.html  157.html  176.html  186.html  261.html  269.html  30.html  3084720398509283.html  4324382764329402.html  4632743894942332.html  584.html  593.html  623.html  698.html  9375834738739834.html
docs/scripts/: blackbox.js
docs/src/hello_world/: hello_world.rs.html
docs/src/watch/: lib.rs.html
docs/style/: aesthetic.css
docs/style/theme/: light.css
docs/watch/: all.html  index.html
hold/src/: lib.rs
legacy/: .gitignore
legacy/bocs/: main.js
legacy/docs/scripts/: blackbox.js
legacy/src/: lib.rs
legacy/src/life/: board.rs
legacy/web/: index.html  main.js  package-lock.json  package.json
legacy/web/scenes/: 100.html  (+1 more)
res/time/: index.html
scripts/doc/: generate.sh
src/: lib.rs
src/life/: board.rs  cell.rs  mod.rs
tests/: web.rs
web/: bootstrap.js  index.html  main.js  package-lock.json  package.json  webpack.config.js
web/scenes/: 105.html  118.html  164.html  176.html  243.html  261.html  30.html  3426372374893290.html  4324382764329402.html  5643743724839445.html  589.html  599.html  652.html  698.html
web/scripts/: blackbox.js
(+6 files in other folders)
